[gd_scene load_steps=6 format=3 uid="uid://bu5psg11h2pk6"]

[ext_resource type="Script" path="res://main_menu_button_handler.gd" id="1_2pbvu"]
[ext_resource type="FontFile" uid="uid://d2k441xoyms78" path="res://build/windows/assets/fonts/Orbitron/static/Orbitron-ExtraBold.ttf" id="2_n4ooc"]
[ext_resource type="Theme" uid="uid://cx8v3o7umtucr" path="res://build/windows/assets/themes/secondary_menu_buttons.tres" id="3_hsdm2"]
[ext_resource type="PackedScene" uid="uid://d0qtowtusfaqh" path="res://highlight.tscn" id="4_npom1"]

[sub_resource type="LabelSettings" id="LabelSettings_wpmcc"]
font = ExtResource("2_n4ooc")
font_size = 100

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2pbvu")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "GLYPH_NODE"
label_settings = SubResource("LabelSettings_wpmcc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer" groups=["button"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer3/Quit")
focus_neighbor_top = NodePath("../../HBoxContainer3/Quit")
focus_neighbor_right = NodePath("../../HBoxContainer2/Continue")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/Continue")
focus_next = NodePath("../../HBoxContainer2/Continue")
focus_previous = NodePath("../../HBoxContainer2/Continue")
theme = ExtResource("3_hsdm2")
text = "New Game"
alignment = 0

[node name="Highlight" parent="VBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("4_npom1")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer2" groups=["button"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer/NewGame")
focus_neighbor_top = NodePath("../../HBoxContainer/NewGame")
focus_neighbor_right = NodePath("../../HBoxContainer4/Settings")
focus_neighbor_bottom = NodePath("../../HBoxContainer4/Settings")
focus_next = NodePath("../../HBoxContainer3/Quit")
focus_previous = NodePath("../../HBoxContainer/NewGame")
theme = ExtResource("3_hsdm2")
disabled = true
text = "Continue"
alignment = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer4" groups=["button"]]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer2/Continue")
focus_neighbor_top = NodePath("../../HBoxContainer2/Continue")
focus_neighbor_right = NodePath("../../HBoxContainer3/Quit")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/Quit")
focus_next = NodePath("../../HBoxContainer3/Quit")
focus_previous = NodePath("../../HBoxContainer2/Continue")
theme = ExtResource("3_hsdm2")
text = "Settings"
alignment = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer3" groups=["button"]]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer4/Settings")
focus_neighbor_top = NodePath("../../HBoxContainer4/Settings")
focus_neighbor_right = NodePath("../../HBoxContainer/NewGame")
focus_neighbor_bottom = NodePath("../../HBoxContainer/NewGame")
focus_next = NodePath("../../HBoxContainer/NewGame")
focus_previous = NodePath("../../HBoxContainer4/Settings")
theme = ExtResource("3_hsdm2")
text = "Quit"
alignment = 0

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer2/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer4/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer3/Quit" to="." method="_on_quit_pressed"]
